src/Components/Molecules/Library Picture/LibraryPicture.module.css
#overlay {
    position: fixed; 
    width: 100%; 
    height: 100%; 
    top: 0; 
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5); 
    z-index: 2; 
    cursor: pointer; 
}

#libraryPicture {
   
    width: auto;
    height: 100%;
}

#imgContainer {
    position: relative;
    height: 100%;
    display: flex;
    justify-content: center;
}

#imgContainer.clicked {
    border: 2px solid var(--text-secondary);
    border-radius: 2px;
}



#text {
    color: #fff;
}

#textContainer {
    background-color: var(--text-secondary);
    padding: 0.8rem;
    margin-top: 3px; 
    border-radius: 4px;
    position: absolute;
    width: 100%;
    overflow: hidden;
    overflow-wrap: break-word;
}

#libraryPictureComponentContainer {
    width: 100%;
    height: 100%;
    margin: 1rem 0;
    position: relative;
}

.clicked {
    z-index: 4;

}

